# realm

./: .env.example  .gitignore  manage.py  pyproject.toml  realm.sublime-project  realm.sublime-workspace  reset.sh
_frontend/: package-lock.json  package.json  postcss.config.js  tailwind.config.js  webpack.config.js
_frontend/src/: sitemap.xml
_frontend/src/css/: house_detail.css  index.css
_frontend/src/js/: index.js
facebook/: admin.py  models.py  refresh.py  utils.py
facebook/migrations/: 0001_initial.py  0002_alter_facebookaccesstoken_expiry.py
fixtures/auth/: users.json
houses/: admin.py  apps.py  forms.py  managers.py  models.py  signals.py  urls.py  utils.py  views.py  widgets.py
houses/migrations/: 0001_initial.py  0002_alter_housefile_options_alter_housefile_house.py  0003_alter_housetype_options_and_more.py  0003_house_adapted_for_reduced_mobility_house_floor_level_and_more.py  0004_countrytax_pricingtier.py  0005_alter_countrytax_options_alter_housetype_options_and_more.py
houses/models/: __init__.py  houses.py  locations.py  pricing.py
houses/templatetags/: custom_formats.py  custom_styles.py  string_utils.py
realm/: asgi.py  settings.py  urls.py  utils.py  views.py  wsgi.py
static/: 226.js  624.js  96.js  site.webmanifest  src_css_house_detail_css.js  src_css_index_css.js  vendors.js
static/css/: 226.css  624.css  house_detail.css  index.css  src_css_house_detail_css.css  src_css_index_css.css  vendors.css
static/js/: index.js
templates/: base.html  contacts.html  home.html
templates/components/: header.html
(+43 files in other folders)
